--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "name": "design-system-11ty-starter",
   "version": "1.0.0",
   "description": "Starter template for creating an 11ty (eleventy) project with the U-M Library Design System",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "start": "npx @11/eleventy --serve",
-    "build": "npx @11ty/eleventy"
+    "watch:sass": "sass --no-source-map --watch src/sass:public/css",
+    "build:sass": "sass src/sass:public/css",
+    "watch:eleventy": "eleventy --serve",
+    "build:eleventy": "eleventy",
+    "start": "npm-run-all --parallel watch:eleventy watch:sass",
+    "build": "npm-run-all build:sass build:eleventy"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mlibrary/design-system-11ty-starter.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "UM Library Design System",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mlibrary/design-system-11ty-starter/issues"
   },
   "homepage": "https://github.com/mlibrary/design-system-11ty-starter#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.2"
+    "@11ty/eleventy": "^1.0.2",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.54.6"
   }
 }
