--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/mlibrary/design-system-11ty-starter#readme",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-navigation": "^0.3.5",
     "npm-run-all": "^4.1.5",
     "sass": "^1.54.6"
   }
